# scripts/server/app/openapi/swagger.json
@@ -124,7 +124,8 @@
       "PlaylistItem": {
         "properties": {
           "videoId": {
-            "type": "string"
+            "type": "string",
+            "nullable": true
           },
           "title": {
             "type": "string"
@@ -144,7 +145,12 @@
             "nullable": true
           },
           "likeStatus": {
-            "$ref": "#/components/schemas/LikeStatus"
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/LikeStatus"
+              }
+            ],
+            "nullable": true
           },
           "thumbnails": {
             "items": {
@@ -154,10 +160,12 @@
             "nullable": true
           },
           "isAvailable": {
-            "type": "boolean"
+            "type": "boolean",
+            "nullable": true
           },
           "isExplicit": {
-            "type": "boolean"
+            "type": "boolean",
+            "nullable": true
           },
           "videoType": {
             "allOf": [
